--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sunburst",
+  "name": "gi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,5 +39,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NewDivide41194/HeatMap.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NewDivide41194/HeatMap/issues"
+  },
+  "homepage": "https://github.com/NewDivide41194/HeatMap#readme"
 }
